[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/StationaryEnemy/StationaryEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/StationaryEnemy/Snapper/snapper_neck.png" type="Texture" id=3]
[ext_resource path="res://Enemies/StationaryEnemy/Snapper/snapper_head.png" type="Texture" id=4]
[ext_resource path="res://Enemies/StationaryEnemy/Snapper/snapper_leafs.png" type="Texture" id=5]
[ext_resource path="res://Enemies/StationaryEnemy/Snapper/snapper_head_3.png" type="Texture" id=6]
[ext_resource path="res://Enemies/StationaryEnemy/Snapper/snapper_head_2.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 15.8258

[sub_resource type="Animation" id=2]
resource_name = "HeadIdle"
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 70.3886

[sub_resource type="Animation" id=4]
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6/head/HeadHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_idle_animation"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/neck:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ -9.2, -75.1, 18.2, -9.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/neck/neck2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 11.8, 6.2, 28.9, 11.8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/neck/neck2/neck3:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 12.1, 35.9, 18.8, 12.1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/neck/neck2/neck3/neck4:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 12.8, 27.3, 10.1, 12.8 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 11.2, 38.0, 12.2, 11.2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 12.8, 26.4, -0.6, 12.8 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6/head:rotation_degrees")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.392291, 0.091505, 2.14356, 2.14356 ),
"update": 0,
"values": [ 8.9, 33.3, -0.9, 8.9 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprites/left_leaf:rotation_degrees")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.391, 0.091505, 1, 0.391 ),
"update": 0,
"values": [ 24.9, -3.0, 79.5, 24.9 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprites/right_leaf:rotation_degrees")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.391, 0.091505, 1, 0.391 ),
"update": 0,
"values": [ -25.0, -18.0, -4.2, -25.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprites/neck/neck2:position")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 3, -6 ), Vector2( 0, -5 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprites/neck/neck2/neck3:position")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -8 ), Vector2( 0, -6 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprites/neck/neck2/neck3/neck4:position")
tracks/13/interp = 2
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -9 ), Vector2( 0, -6 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5:position")
tracks/14/interp = 2
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -9 ), Vector2( 0, -6 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6:position")
tracks/15/interp = 2
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -9 ), Vector2( 0, -6 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6/head:position")
tracks/16/interp = 2
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 1, 1.5, 2.3 ),
"transitions": PoolRealArray( 0.091505, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -9 ), Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/neck:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -9.2, -21.1, -9.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/neck/neck2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 11.8, 9.3, 11.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/neck/neck2/neck3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12.1, 10.3, 12.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/left_leaf:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 24.9, 40.6, 24.9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/right_leaf:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -25.0, -43.0, -25.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/neck/neck2/neck3/neck4:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12.8, 19.2, 12.8 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 11.2, 20.3, 11.2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12.8, 20.6, 12.8 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/neck/neck2/neck3/neck4/neck5/neck6/head:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8.9, 14.2, 8.9 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 10.9624

[node name="Snapper" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
health = 3
damage = 3
attack_speed = 0.0
move_speed = 0.0

[node name="Sprites" type="Node2D" parent="."]

[node name="base" type="Sprite" parent="Sprites"]
visible = false
scale = Vector2( 1, 0.5 )
texture = ExtResource( 1 )

[node name="neck" type="Sprite" parent="Sprites"]
rotation = -0.16057
texture = ExtResource( 3 )
offset = Vector2( 0, -3 )

[node name="neck2" type="Sprite" parent="Sprites/neck"]
position = Vector2( 0, -5 )
rotation = 0.205949
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )

[node name="neck3" type="Sprite" parent="Sprites/neck/neck2"]
position = Vector2( 0, -6 )
rotation = 0.211185
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )

[node name="neck4" type="Sprite" parent="Sprites/neck/neck2/neck3"]
position = Vector2( 0, -6 )
rotation = 0.223402
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )

[node name="neck5" type="Sprite" parent="Sprites/neck/neck2/neck3/neck4"]
position = Vector2( 0, -6 )
rotation = 0.195477
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )

[node name="neck6" type="Sprite" parent="Sprites/neck/neck2/neck3/neck4/neck5"]
position = Vector2( 0, -6 )
rotation = 0.223402
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )

[node name="head" type="Sprite" parent="Sprites/neck/neck2/neck3/neck4/neck5/neck6"]
position = Vector2( 0, -6 )
rotation = 0.155334
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )
flip_h = true

[node name="HeadHitbox" type="Area2D" parent="Sprites/neck/neck2/neck3/neck4/neck5/neck6/head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/neck/neck2/neck3/neck4/neck5/neck6/head/HeadHitbox"]
position = Vector2( -0.520117, -8.48172 )
shape = SubResource( 1 )
disabled = true

[node name="HeadAnimPlayer" type="AnimationPlayer" parent="Sprites/neck/neck2/neck3/neck4/neck5/neck6/head"]
autoplay = "HeadIdle"
anims/HeadIdle = SubResource( 2 )

[node name="left_leaf" type="Sprite" parent="Sprites"]
position = Vector2( -1.91095, -0.702657 )
rotation = 0.434587
texture = ExtResource( 5 )
offset = Vector2( -8, 0 )
region_enabled = true
region_rect = Rect2( 0, 1, 15, 11 )

[node name="right_leaf" type="Sprite" parent="Sprites"]
position = Vector2( 1.34089, -0.753306 )
rotation = -0.436332
texture = ExtResource( 5 )
offset = Vector2( 8, 0 )
region_enabled = true
region_rect = Rect2( 14, 0, 17, 12 )

[node name="AttackRadius" type="Area2D" parent="."]

[node name="CircleCollider" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 4 )
anims/Idle = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.92965 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Sprites/neck/neck2/neck3/neck4/neck5/neck6/head/HeadHitbox" to="." method="_on_HeadHitbox_body_entered"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
