[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/StationaryEnemy/StationaryEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 39.4245

[sub_resource type="CircleShape2D" id=1]
radius = 103.816

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/neck:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.9, -68.5, 54.4, 54.4, 10.9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/neck/neck2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 31.6, 60.2, 20.3, 20.3, 31.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/neck/neck2/neck3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 17.4, 44.3, 16.8, 16.8, 17.4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/neck/neck2/neck3/head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 19.5, 42.4, 5.4, 5.4, 19.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/neck/neck2/neck3/head/HeadHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/neck:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.9, 7.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/neck/neck2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 31.6, 35.3, 31.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/neck/neck2/neck3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 17.4, 21.5, 17.4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/neck/neck2/neck3/head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 19.5, 19.5, 19.5 ]
}

[node name="StationaryEnemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="base" type="Sprite" parent="Sprites"]
scale = Vector2( 1, 0.5 )
texture = ExtResource( 1 )

[node name="neck" type="Sprite" parent="Sprites"]
rotation = 0.190241
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="neck2" type="Sprite" parent="Sprites/neck"]
position = Vector2( 0, -64 )
rotation = 0.551524
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="neck3" type="Sprite" parent="Sprites/neck/neck2"]
position = Vector2( 0, -64 )
rotation = 0.303687
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="head" type="Sprite" parent="Sprites/neck/neck2/neck3"]
position = Vector2( -5.39848, -47.5432 )
rotation = 0.340339
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="HeadHitbox" type="Area2D" parent="Sprites/neck/neck2/neck3/head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/neck/neck2/neck3/head/HeadHitbox"]
position = Vector2( 0.169224, -32.8481 )
shape = SubResource( 3 )
disabled = true

[node name="AttackRadius" type="Area2D" parent="."]

[node name="CircleCollider" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Idle = SubResource( 2 )

[connection signal="body_entered" from="Sprites/neck/neck2/neck3/head/HeadHitbox" to="." method="_on_HeadHitbox_body_entered"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
